tests/snapshots/approval__graphql.snap
---
source: tests/approval.rs
expression: result
---
{
  "data": {
    "book": {
      "id": 1,
      "title": "Collected Fictions",
      "author": "Jorge Luis Borges",
      "imageUrl": null,
      "year": 1998,
      "pages": 565,
      "notes": [
        {
          "id": 1,
          "bookId": 1,
          "note": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
          "page": 100
        },
        {
          "id": 4,
          "bookId": 1,
          "note": "good book",
          "page": null
        },
        {
          "id": 5,
          "bookId": 1,
          "note": "too many pages!",
          "page": 3
        }
      ]
    }
  }
}
