tests/snapshots/approval__inner@add_note_mutation.snap
---
source: tests/approval.rs
expression: result
---
{
  "data": {
    "addNote": {
      "note": {
        "bookId": 1,
        "id": 4,
        "note": "new note!",
        "page": 3
      },
      "success": true
    }
  }
}
