tests/snapshots/approval__inner@book_query.snap
---
source: tests/approval.rs
expression: result
---
{
  "data": {
    "book": {
      "author": "Jorge Luis Borges",
      "id": 1,
      "notes": [
        {
          "bookId": 1,
          "id": 1,
          "note": "Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore magna aliqua.",
          "page": 100
        }
      ],
      "pages": 565,
      "title": "Collected Fictions",
      "year": 1998
    }
  }
}
