tests/snapshots/approval__inner@book_status_mutation.snap
---
source: tests/approval.rs
expression: result
---
{
  "data": {
    "updateBookStatus": {
      "id": 2,
      "status": "READ",
      "title": "Gravity's Rainbow"
    }
  }
}
