tests/snapshots/approval__inner@invalid_book_id_note_mutation.snap
---
source: tests/approval.rs
expression: result
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 11,
          "line": 3
        }
      ],
      "message": "Book with that ID not found",
      "path": [
        "addNote"
      ]
    }
  ]
}
