tests/snapshots/approval__inner@invalid_book_id_status_mutation.snap
---
source: tests/approval.rs
expression: result
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 11,
          "line": 3
        }
      ],
      "message": "No book with ID 999 found.",
      "path": [
        "updateBookStatus"
      ]
    }
  ]
}
