tests/snapshots/approval__inner@invalid_negative_book_page_note_mutation.snap
---
source: tests/approval.rs
expression: result
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 11,
          "line": 3
        }
      ],
      "message": "Note page number cannot be less than 1.",
      "path": [
        "addNote"
      ]
    }
  ]
}
