tests/snapshots/approval__inner@invalid_page_note_mutation.snap
---
source: tests/approval.rs
expression: result
---
{
  "data": null,
  "errors": [
    {
      "locations": [
        {
          "column": 11,
          "line": 3
        }
      ],
      "message": "Note page number cannot be greater than the highest page count of the book.",
      "path": [
        "addNote"
      ]
    }
  ]
}
