tests/snapshots/approval__inner@read_books_query.snap
---
source: tests/approval.rs
expression: result
---
{
  "data": {
    "books": [
      {
        "author": "Jorge Luis Borges",
        "id": 1,
        "pages": 565,
        "status": "READ",
        "title": "Collected Fictions",
        "year": 1998
      }
    ]
  }
}
